dev/test_programs/INVALID/group1/exp2.go
package main

func main(){
	var x int;
	var y int = 5;
	x = *y;
}
